--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -11,6 +11,7 @@ html {
   letter-spacing: 0.025rem;
 }
 
+/* Global markup */
 a,
 a:active,
 a:hover,
@@ -58,8 +59,8 @@ ul {
 .fixed-top {
   position: fixed;
   top: 0;
-  right: 0;
-  left: 0;
+  /* right: 0; */
+  /* left: 0; */
   z-index: 1030;
 }
 
@@ -107,6 +108,25 @@ header .current a {
 header a:hover {
   color: #cccccc;
   font-weight: bold;
+}
+
+/* Showcase */
+#showcase {
+  min-height: 400px;
+  /* Move image up within background */
+  background: url("../img/showcase.jpg") no-repeat 0 -400px;
+  text-align: center;
+  color: white;
+}
+
+#showcase h1 {
+  margin-top: 100px;
+  font-size: 55px;
+  margin-bottom: 10px;
+}
+
+#showcase p {
+  font-size: 20px;
 }
 
 /* Footer */
