--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -92,6 +92,7 @@ header #branding {
 
 header #branding h1 {
   margin: 0;
+  float: right;
 }
 
 header nav {
@@ -127,6 +128,25 @@ header a:hover {
 
 #showcase p {
   font-size: 20px;
+}
+
+/* Projects */
+.projects {
+  padding: 2rem;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.project {
+  background: #dddddd;
+  text-align: center;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+.project p {
+  text-align: left;
 }
 
 /* Footer */
